<resources>
    <string name="app_name">DRAFT SL</string>
    <string name="citas">Citas</string>
    <string name="pedidos">Pedidos</string>
    <string name="partners">Partners</string>
    <string name="envios">Envios</string>
    <string name="ejemplo_email_com">ejemplo@email.com</string>
    <string name="_681393521">681393521</string>
    <string name="direccion">Direccion:</string>
    <string name="env_os">Envíos</string>
    <string name="ccitas">Calendario Citas</string>
</resources>